Update the mIsDJ boolean in GroupsPlayerFragment to avoid incorrect state. (might still not work)